# 3d-model-viewer

./: .gitignore  CMakeLists.txt  README.md
data/shaders/default/: fragment_shader.glsl  vertex_shader.glsl
data/shaders/plane/: fragment_shader.glsl  vertex_shader.glsl
docs/: Illumination.md  Transformations and Projection.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: bounding_box.hpp  constants.hpp  io.hpp  matrix4.hpp  obj_loader.hpp  str_tools.hpp
include/accumulator/: accumulator.hpp  accumulator_mat4.hpp
include/events/: event.hpp  event_dispatcher.hpp  event_listener.hpp  keyboard_events.hpp  mouse_events.hpp
include/model_3d/: mesh_model.hpp
include/opengl_wrapper/: framebuffer.hpp  message_callback.hpp  shader_program.hpp  texture.hpp  vertex_array_object.hpp
lodepng/: CMakeLists.txt
src/: bounding_box.cpp  constants.cpp  io.cpp  main.cpp  matrix4.cpp  obj_loader.cpp  str_tools.cpp
src/accumulator/: accumulator_mat4.cpp
src/events/: event_dispatcher.cpp  event_listener.cpp  keyboard_events.cpp  mouse_events.cpp
src/model_3d/: mesh_model.cpp
src/opengl_wrapper/: framebuffer.cpp  message_callback.cpp  shader_program.cpp  texture.cpp  vertex_array_object.cpp
